# ============================================================================ #
#  BusTrack Bus Tracking System                                                #
#  CS3249 User Interface Development                                           #
# ============================================================================ #
#  Copyright 2014 Ko Wan Ling, Terence Then, Kek Yan Rong and Wong Yong Jie    #
#                                                                              #
#  Licensed under the Apache License, Version 2.0 (the "License");             #
#  you may not use this file except in compliance with the License.            #
#  You may obtain a copy of the License at                                     #
#                                                                              #
#  http://www.apache.org/licenses/LICENSE-2.0                                  #
#                                                                              #
#  Unless required by applicable law or agreed to in writing, software         #
#  distributed under the License is distributed on an "AS IS" BASIS,           #
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.    #
#  See the License for the specific language governing permissions and         #
#  limitations under the License.                                              #
# ============================================================================ #

# Add files for the client.
set (client_SOURCES
  bustrackwindow.cpp
  bustrackservice.cpp
  mapview.cpp
  main.cpp
)

set (client_HEADERS
  bustrackwindow.h
  bustrackservice.h
  mapview.h
)

set (client_FORMS
  bustrackwindow.ui
)

set (client_RESOURCES
  bustrack.qrc
)

# Run the Qt4 preprocessor.
qt4_wrap_cpp (client_HEADERS_MOC ${client_HEADERS})
qt4_wrap_ui (client_FORMS_HEADERS ${client_FORMS})
qt4_add_resources (client_RESOURCES_RCC ${client_RESOURCES})

# Add definitions for Qt4.
include (${QT_USE_FILE})
add_definitions (${QT_DEFINITIONS})

# As the intermediate header files generated by the Qt preprocessor will be
# generated in the binary directory, we need to include the binary directory
# for the compiler to find it later on.
include_directories (${CMAKE_CURRENT_BINARY_DIR})
include_directories (${CMAKE_CURRENT_SOURCE_DIR})

# Add the executable and link the libraries.
add_executable (client ${client_SOURCES}
  ${client_HEADERS_MOC}
  ${client_FORMS_HEADERS}
  ${client_RESOURCES_RCC}
)

# Link the BusTrack daemon to the common BusTrack library.
target_link_libraries (client ${QT_LIBRARIES} bustrack)

# vim: set ts=2 sw=2 et:
